Fix `tablist` command on 1.19.3 (#2434)
* Initial fix & cleanup

* Update meta, add tab-complete

* Update examples

* Cleaner error when there's no linked player

* Cleanups

* Game mode can be `null`

* Field renames, better meta example

* Remove our default gamemode for `add`